<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.addContact.AddContactFragment">

    <EditText
        android:id="@+id/input_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:layout_marginEnd="154dp"
        android:hint="@string/hint__input_name"
        app:layout_constraintEnd_toStartOf="@+id/input_contact_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_contact_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/hint_input_phone"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/input_contact_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contact_name" />

    <EditText
        android:id="@+id/input_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/hint_input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/input_contact_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contact_phone" />

    <EditText
        android:id="@+id/input_contact_coment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:layout_marginEnd="123dp"
        android:hint="@string/hint_input_coment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contact_email" />

    <ImageView
        android:id="@+id/input_contact_photo"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/input_contact_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_contact_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_contact_coment"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/group_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>